feat: atualizações de navegação e estilos de layout

--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         <img src="src/assets/logo.png" class="logo" alt="Voltaic Startup" />
 
         <ul>
-          <li><a href="#introduction">Avanços</a></li>
-          <li><a href="#">Parceiros</a></li>
-          <li><a href="#">Sobre nós</a></li>
-          <li><a href="#">Ser parceiro</a></li>
+          <li><a href="#introduction">Início</a></li>
+          <li><a href="#report">Parceiros</a></li>
+          <li><a href="#methods">Metodos</a></li>
         </ul>
 
         <button>Entrar</button>
       </header>
 
-      <section id="introduction" class="content-introduction">
+      <section
+        id="introduction"
+        class="content-introduction"
+        style="padding: 64px 0"
+      >
         <div class="header-introduction">
           <div class="header-introduction-section">
             <span>Melhor, juntos!</span>
@@ -66,7 +69,11 @@
         </div>
       </section>
 
-      <section id="report" class="content-introduction" style="gap: 44px">
+      <section
+        id="report"
+        class="content-introduction"
+        style="padding: 64px 0; gap: 44px"
+      >
         <div class="header-introduction" style="align-items: end">
           <div class="header-introduction-section">
             <span>Melhor, juntos!</span>
@@ -126,11 +133,26 @@
       </section>
 
       <section
-        id="report"
+        id="methods"
         class="content-introduction"
-        style="display: flex; align-items: start; flex-flow: row; gap: 0px"
+        style="
+          display: flex;
+          align-items: start;
+          flex-flow: row;
+          gap: 0px;
+          padding: 64px 0;
+        "
       >
-        <div class="header-introduction" style="align-items: end; width: 100%">
+        <div
+          class="header-introduction"
+          style="
+            align-items: end;
+            width: 100%;
+            position: -webkit-sticky;
+            position: sticky;
+            top: 64px;
+          "
+        >
           <div class="header-introduction-section">
             <span>Melhor, juntos!</span>
             <h1>
