fix: atualizar logotipo para formato SVG e ajustar estilos de CSS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="section-container">
       <header class="header-container">
-        <img src="src/assets/logo.png" class="logo" alt="Voltaic Startup" />
+        <img src="src/assets/logo.svg" class="logo" alt="Voltaic Startup" />
 
         <ul>
           <li><a href="#introduction">Início</a></li>
@@ -207,9 +207,12 @@
       </section>
 
       <footer class="footer-container">
-        <div class="footer-content" style="display: flex; align-items: start">
+        <div
+          class="footer-content"
+          style="display: flex; align-items: start; padding-bottom: 12rem"
+        >
           <div style="width: 100%">
-            <img src="src/assets/logo.png" class="logo" alt="" />
+            <img src="src/assets/logo.svg" class="logo" alt="" />
           </div>
           <div
             class="column-footer-container"
