fix: atualizar logotipo das empresas para formato SVG

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           <div class="brands-container">
             <img
-              src="src/assets/enterprises.png"
+              src="src/assets/enterprises.svg"
               alt="Parceiros da Voltaic Startup"
             />
           </div>
