fix: atualizar imagens para formato SVG

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div>
           <div class="image-container">
             <img
-              src="src/assets/background-image.png"
+              src="src/assets/background-image.svg"
               class="image-content"
               alt="Usina Solar Fotovoltaica"
             />
@@ -86,7 +86,7 @@
 
           <div class="partners-photos-container">
             <img
-              src="src/assets/partners.png"
+              src="src/assets/partners.svg"
               class="partners"
               alt="Fotos dos parceiros"
             />
